[gd_scene load_steps=67 format=3 uid="uid://c3xyq5tra3eyx"]

[ext_resource type="Script" path="res://scripts/t_rex_game.gd" id="1_dh214"]
[ext_resource type="PackedScene" uid="uid://cuyd1qv0pn26e" path="res://addons/midi/MidiPlayer.tscn" id="2_qgi35"]
[ext_resource type="AudioStream" uid="uid://cc5a7rwpm32qj" path="res://assets/music/t_rex/TREXLose.mp3" id="3_2kau2"]
[ext_resource type="Texture2D" uid="uid://bh8r8xldtv7l4" path="res://assets/images/t_rex/Background.png" id="3_eg7k7"]
[ext_resource type="AudioStream" uid="uid://doya8l10mijtk" path="res://assets/music/t_rex/TREXGroove.mp3" id="3_t2d62"]
[ext_resource type="AudioStream" uid="uid://bamus7srvf2ku" path="res://assets/music/t_rex/TREXMainMusic.mp3" id="4_vuuns"]
[ext_resource type="AudioStream" uid="uid://7sno3hoclkwr" path="res://assets/music/t_rex/TREXWin.mp3" id="5_8iljc"]
[ext_resource type="PackedScene" uid="uid://b0e6t0ypkw46h" path="res://scenes/games/t_rex/candy_arrow_follower.tscn" id="5_ionbc"]
[ext_resource type="Texture2D" uid="uid://cev7tenguvdj1" path="res://assets/images/t_rex/PC_animation-Sheet.png" id="5_iq6in"]
[ext_resource type="Texture2D" uid="uid://cj3powqno8687" path="res://assets/images/t_rex/conveyor_belt_static.png" id="6_5jj4u"]
[ext_resource type="Texture2D" uid="uid://di1achfy06u80" path="res://assets/images/t_rex/ring_sprite_sheet.png" id="6_f8hln"]
[ext_resource type="Shader" path="res://shaders/recolor.gdshader" id="7_2gg1w"]
[ext_resource type="Texture2D" uid="uid://blwsnjkb1rcb3" path="res://assets/images/t_rex/TRex_animation-Sheet.png" id="7_5nfyv"]
[ext_resource type="Texture2D" uid="uid://c1dqf3khga4ke" path="res://assets/ui/transparent.png" id="8_wd5yu"]
[ext_resource type="PackedScene" uid="uid://bp7i043fy7n2j" path="res://scenes/components/controls.tscn" id="8_yoofu"]
[ext_resource type="Texture2D" uid="uid://cpolhqdhhciak" path="res://assets/images/t_rex/Ring_spriteSheet.png" id="12_dh3da"]
[ext_resource type="Texture2D" uid="uid://3ob2pl0l5gyq" path="res://assets/images/t_rex/Hit_spriteSheet.png" id="14_loms7"]
[ext_resource type="PackedScene" uid="uid://dk28jnwyfy0aj" path="res://scenes/components/fader.tscn" id="14_w8p5c"]
[ext_resource type="Texture2D" uid="uid://4gb486kj0kqn" path="res://assets/images/t_rex/FullnessMeter.png" id="17_wbaii"]
[ext_resource type="Texture2D" uid="uid://o0rjnu2agyio" path="res://assets/ui/white.png" id="18_eqmgw"]

[sub_resource type="Curve2D" id="Curve2D_cq7oq"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -230, -32, 0, 0, 0, 0, -101, -32, 0, 0, 0, 0, -100, -6, 0, 0, 0, 0, -301, -6)
}
point_count = 4

[sub_resource type="Animation" id="Animation_hthsg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_qk18l"]
resource_name = "idle"
length = 0.7
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_1v4gf"]
resource_name = "punch"
length = 0.24
step = 0.08
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0769231, 0.153846),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [2, 0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oi0mq"]
_data = {
"RESET": SubResource("Animation_hthsg"),
"idle": SubResource("Animation_qk18l"),
"punch": SubResource("Animation_1v4gf")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_htl1s"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qw1o3"]
animation = &"punch"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3wa54"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4biwq"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_543hr"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_ia5bb"]
states/idle/node = SubResource("AnimationNodeAnimation_htl1s")
states/idle/position = Vector2(399.5, 99.625)
states/punch/node = SubResource("AnimationNodeAnimation_qw1o3")
states/punch/position = Vector2(680.5, 99.25)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_3wa54"), "idle", "punch", SubResource("AnimationNodeStateMachineTransition_4biwq"), "punch", "idle", SubResource("AnimationNodeStateMachineTransition_543hr")]

[sub_resource type="CircleShape2D" id="CircleShape2D_3tqsj"]
radius = 14.0

[sub_resource type="AtlasTexture" id="AtlasTexture_b1j0e"]
atlas = ExtResource("6_f8hln")
region = Rect2(0, 0, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbca3"]
atlas = ExtResource("6_f8hln")
region = Rect2(34, 0, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_76amu"]
atlas = ExtResource("6_f8hln")
region = Rect2(68, 0, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_np71s"]
atlas = ExtResource("6_f8hln")
region = Rect2(102, 0, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bhje"]
atlas = ExtResource("6_f8hln")
region = Rect2(136, 0, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpmhf"]
atlas = ExtResource("6_f8hln")
region = Rect2(170, 0, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_0kt5h"]
atlas = ExtResource("6_f8hln")
region = Rect2(204, 0, 34, 34)

[sub_resource type="SpriteFrames" id="SpriteFrames_bgamp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1j0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbca3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76amu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_np71s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bhje")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpmhf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0kt5h")
}, {
"duration": 1.0,
"texture": ExtResource("8_wd5yu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76amu")
}],
"loop": false,
"name": &"burst",
"speed": 30.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_lgi3p"]
atlas = ExtResource("8_wd5yu")
region = Rect2(0, 0, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_cnqeh"]
atlas = ExtResource("12_dh3da")
region = Rect2(0, 0, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_njaf5"]
atlas = ExtResource("12_dh3da")
region = Rect2(34, 0, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_sj4il"]
atlas = ExtResource("12_dh3da")
region = Rect2(68, 0, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ibmf"]
atlas = ExtResource("12_dh3da")
region = Rect2(102, 0, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_n02r3"]
atlas = ExtResource("12_dh3da")
region = Rect2(136, 0, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_ju0hr"]
atlas = ExtResource("12_dh3da")
region = Rect2(170, 0, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_1uqp0"]
atlas = ExtResource("12_dh3da")
region = Rect2(204, 0, 34, 34)

[sub_resource type="SpriteFrames" id="SpriteFrames_axa1b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgi3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgi3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnqeh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_njaf5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sj4il")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ibmf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n02r3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ju0hr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1uqp0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgi3p")
}],
"loop": false,
"name": &"default",
"speed": 30.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_8trnd"]
atlas = ExtResource("14_loms7")
region = Rect2(0, 0, 54, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_2fif6"]
atlas = ExtResource("14_loms7")
region = Rect2(54, 0, 54, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ckci"]
atlas = ExtResource("14_loms7")
region = Rect2(108, 0, 54, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_utgnx"]
atlas = ExtResource("14_loms7")
region = Rect2(162, 0, 54, 38)

[sub_resource type="SpriteFrames" id="SpriteFrames_rrxh8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8trnd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fif6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ckci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utgnx")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="Animation" id="Animation_ohwan"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_murxh"]
resource_name = "chomp"
length = 0.56
step = 0.08
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08, 0.16, 0.24, 0.32, 0.4, 0.48),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_3b5p6"]
resource_name = "idle"
length = 0.7
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10, 11, 12, 13]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8sqp3"]
_data = {
"RESET": SubResource("Animation_ohwan"),
"chomp": SubResource("Animation_murxh"),
"idle": SubResource("Animation_3b5p6")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hweff"]
animation = &"chomp"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qfyty"]
animation = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_r1mvu"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dolwp"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pshil"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_4hkte"]
states/chomp/node = SubResource("AnimationNodeAnimation_hweff")
states/chomp/position = Vector2(736, 99.5)
states/idle/node = SubResource("AnimationNodeAnimation_qfyty")
states/idle/position = Vector2(479, 101.5)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_r1mvu"), "idle", "chomp", SubResource("AnimationNodeStateMachineTransition_dolwp"), "chomp", "idle", SubResource("AnimationNodeStateMachineTransition_pshil")]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gtjr3"]
radius = 8.0
height = 80.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7fog1"]
shader = ExtResource("7_2gg1w")
shader_parameter/threshold1 = 0.167
shader_parameter/threshold2 = 0.5
shader_parameter/threshold3 = 0.833
shader_parameter/color1 = Color(0.0313726, 0.0941176, 0.12549, 1)
shader_parameter/color2 = Color(0.921569, 0.419608, 0.435294, 1)
shader_parameter/color3 = Color(0.976471, 0.658824, 0.458824, 1)
shader_parameter/color4 = Color(1, 0.964706, 0.827451, 1)

[node name="TRexGame" type="Node2D"]
script = ExtResource("1_dh214")
intro_text = "ROAR!! I've got a hunger, and the only prescription... is more candy! Stand by that belt and throw it at my chompers!!"
win_text = "Oh my god. Why did you feed me so much candy? I can't believe you threw that all in my mouth. I need to go sit down..."
lose_text = "I'm not finished, my stomach is still grumbling! I need you to stay right there and--hey, don't run away from ME!!"
fullness_threshold = 300

[node name="Notes" parent="." instance=ExtResource("2_qgi35")]
file = "res://assets/music/t_rex/TREXMidi.mid"
soundfont = "res://assets/demo/music/8bit.sf2"
bus = &"Music"
muted = true

[node name="Audio" type="Node" parent="."]

[node name="Intro" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("3_t2d62")
autoplay = true
max_polyphony = 2
parameters/looping = true

[node name="Music" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("4_vuuns")
bus = &"Music"

[node name="Win" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("5_8iljc")
bus = &"Music"

[node name="Lose" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("3_2kau2")
bus = &"Music"

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(80, 72)
texture = ExtResource("3_eg7k7")

[node name="ConveyorBeltBG" type="Sprite2D" parent="."]
position = Vector2(131, 65)
scale = Vector2(-1, 1)
texture = ExtResource("6_5jj4u")

[node name="ConveyorBeltFG" type="Sprite2D" parent="."]
position = Vector2(81, 94)
texture = ExtResource("6_5jj4u")

[node name="Candy" type="Node2D" parent="."]
position = Vector2(81, 87)

[node name="CandyArrowPath" type="Path2D" parent="Candy"]
position = Vector2(193, 2)
curve = SubResource("Curve2D_cq7oq")

[node name="CandyArrowSpawner" parent="Candy/CandyArrowPath" node_paths=PackedStringArray("path") instance=ExtResource("5_ionbc")]
unique_name_in_owner = true
position = Vector2(-236.101, -6)
progress = 290.87
path = NodePath("..")

[node name="PlayerCharacter" type="Sprite2D" parent="."]
position = Vector2(40, 38)
texture = ExtResource("5_iq6in")
hframes = 4
vframes = 3
frame = 1

[node name="PCAnimPlayer" type="AnimationPlayer" parent="PlayerCharacter"]
libraries = {
"": SubResource("AnimationLibrary_oi0mq")
}

[node name="PCAnimTree" type="AnimationTree" parent="PlayerCharacter"]
unique_name_in_owner = true
root_node = NodePath("%PCAnimTree/..")
tree_root = SubResource("AnimationNodeStateMachine_ia5bb")
anim_player = NodePath("../PCAnimPlayer")

[node name="Goal" type="Area2D" parent="."]
position = Vector2(38, 89)
collision_layer = 0

[node name="Hitbox" type="CollisionShape2D" parent="Goal"]
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_3tqsj")

[node name="SplashRingFixed" type="AnimatedSprite2D" parent="Goal"]
position = Vector2(0, -3)
sprite_frames = SubResource("SpriteFrames_bgamp")
animation = &"burst"
frame = 8
frame_progress = 1.0

[node name="SplashRing" type="AnimatedSprite2D" parent="."]
position = Vector2(193, 115)
sprite_frames = SubResource("SpriteFrames_axa1b")
frame = 9
frame_progress = 1.0

[node name="HitAnim" type="AnimatedSprite2D" parent="."]
position = Vector2(39, 118)
sprite_frames = SubResource("SpriteFrames_rrxh8")
frame = 2
frame_progress = 0.127029

[node name="TRex" type="Sprite2D" parent="."]
position = Vector2(89, 114)
texture = ExtResource("7_5nfyv")
hframes = 8
vframes = 3
frame = 1

[node name="TRexAnimPlayer" type="AnimationPlayer" parent="TRex"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_8sqp3")
}

[node name="TRexAnimTree" type="AnimationTree" parent="TRex"]
unique_name_in_owner = true
root_node = NodePath("%TRexAnimTree/..")
tree_root = SubResource("AnimationNodeStateMachine_4hkte")
anim_player = NodePath("../TRexAnimPlayer")

[node name="ChompTrigger" type="Area2D" parent="TRex"]
unique_name_in_owner = true
position = Vector2(-89, -91)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TRex/ChompTrigger"]
position = Vector2(112, 92)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_gtjr3")

[node name="SplashRingDest" type="Node2D" parent="."]
position = Vector2(193, 115)

[node name="FullnessMeter" type="Sprite2D" parent="."]
position = Vector2(143, 20.5)
texture = ExtResource("17_wbaii")

[node name="FullnessProgress" type="Sprite2D" parent="FullnessMeter"]
position = Vector2(10, 16.125)
scale = Vector2(7.99999, 1.25)
texture = ExtResource("18_eqmgw")

[node name="FullnessProgressFull" type="Sprite2D" parent="FullnessMeter"]
visible = false
position = Vector2(10, 0.125001)
scale = Vector2(7.99999, 33.25)
texture = ExtResource("18_eqmgw")

[node name="Fader" parent="." instance=ExtResource("14_w8p5c")]
visible = false

[node name="RecolorLayer" type="CanvasLayer" parent="."]

[node name="RecolorShader" type="ColorRect" parent="RecolorLayer"]
material = SubResource("ShaderMaterial_7fog1")
offset_right = 160.0
offset_bottom = 256.0

[node name="Controls" parent="." instance=ExtResource("8_yoofu")]
